third_party/WebKit/Source/WebCore/page/DOMWindow.h
@@ -453,10 +453,6 @@ namespace WebCore {
 #if ENABLE(WEB_TIMING)
         mutable RefPtr<Performance> m_performance;
 #endif
-
-#if ENABLE(BLOB)
-        mutable RefPtr<DOMURL> m_domURL;
-#endif
     };
 
     inline String DOMWindow::status() const
